updated about to honour contributors

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -24,9 +24,12 @@ In case some technical aspect is not working you can raise an issue in our [gith
 ## Contributors
 
 - **Work Package Leaders:** Univ.-Prof. Dr. Annie Waldherr, Univ.-Prof. Hajo Boomgaarden, PhD
-- **Scientific Team:** Dr. Fabienne Lind, Paul Balluff
+- **Scientific Team:** Dr. Fabienne Lind, Paul Balluff, Celina Dinhopl
 - **Technical Implementation:** Paul Balluff
 
+## References
+
+- Schwaiger, L. (2022). *Gegen die Öffentlichkeit: Alternative Nachrichtenmedien im deutschsprachigen Raum*. Bielefeld: transcript Verlag. [10.1515/9783839461211](https://doi.org/10.1515/9783839461211) (List of alternative media for German speaking countries).
 
 # Changelog
 
