--- a/flaskinventory/templates/view/elements/source/journalistic_routines.html
+++ b/flaskinventory/templates/view/elements/source/journalistic_routines.html
@@ -76,7 +76,7 @@
         <dt class="col-sm-3">Countries</dt>
         <dd class="col-sm-9">
             {% for country in entry.country %}
-            <span><a href="{{ url_for('view.view_generic', dgraph_type='Country', unique_name=country.unique_name) }}">{{ country.name }}</a></span>
+            <span><a href="{{ url_for('view.view_uid', uid=country.uid) }}">{{ country.name }}</a></span>
             {{ ", " if not loop.last else "" }}
             {% endfor %}
         </dd>
@@ -84,7 +84,7 @@
         <dt class="col-sm-3">Subunits <a data-bs-toggle="tooltip" data-bs-placement="top" data-bs-html="true" title="Note that entities listed in 'Subunits' are not necessarily part of all the entities listed in 'Countries'."><i class="fas mx-1 fa-question-circle"></i></a></dt>
         <dd class="col-sm-9">
             {% for subunit in entry.geographic_scope_subunit %}
-            <span><a href="{{ url_for('view.view_subunit', uid=subunit.uid)}}">{{ subunit.name }}</a></span>
+            <span><a href="{{ url_for('view.view_generic', dgraph_type='Subunit' uid=subunit.uid)}}">{{ subunit.name }}</a></span>
             {{ ", " if not loop.last else "" }}
             {% endfor %}
             </dd>
