--- a/flaskinventory/templates/view/elements/dataset/about.html
+++ b/flaskinventory/templates/view/elements/dataset/about.html
@@ -19,7 +19,7 @@
         <dt class="col-sm-3">Countries covered in dataset</dt>
         <dd class="col-sm-9">
             {% for country in entry.country %}
-            <span><a href="{{ url_for('view.view_generic', dgraph_type='Country', unique_name=country.unique_name) }}">{{ country.name }}</a></span>
+            <span><a href="{{ url_for('view.view_uid', uid=country.uid) }}">{{ country.name }}</a></span>
             {{ ", " if not loop.last else "" }}
             {% endfor %}
         </dd>
