--- a/flaskinventory/templates/view/elements/operation/reverse.html
+++ b/flaskinventory/templates/view/elements/operation/reverse.html
@@ -1,22 +1,15 @@
+{% from "helpers/_viewhelpers.html" import render_publication %}
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 mb-4"><h5>Tools</h5></dt>
         <dd class="col-sm-9 mb-4"><small class="text-muted">These tools can run the operation.</small></dd>
         {% if entry.tools %} 
+        <dt class="col-sm-3"></dt>
+        <dd class="col-sm-9 mb-4">
             {% for tool in entry.tools %}
-                <dt class="col-sm-3">
-                        
-                </dt>
-                <dd class="col-sm-9 mb-4">
-                    <a href="{{ url_for('view.view_generic', dgraph_type='ResearchPaper', uid=tool.uid) }}" class="me-2">
-                        <em>{{tool.name}}</em></a> 
-                        {% if tool.authors is string %}
-                            <span>({{ tool.authors }})</span>
-                        {% else %}
-                            <span>({{ tool.authors[0] }} et al.)</span>
-                        {% endif %}
-                </dd>
+                <p>{{ render_publication(tool) }}</p>
             {% endfor %}
+        </dd>
         {% endif %}
     </dl>
 </div>
