--- a/flaskinventory/templates/view/elements/corpus/research.html
+++ b/flaskinventory/templates/view/elements/corpus/research.html
@@ -1,10 +1,14 @@
- {% if entry.materials %}
+{% if entry.materials %}
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 mb-4"><h5>Materials</h5></dt>
-        <dd class="col-sm-9 mb-4"><small class="text-muted">Collection of materials that help using the dataset or document it.</small></dd>
+        <dd class="col-sm-9 mb-4"><small class="text-muted">Collection of materials that help using the corpus or document it.</small></dd>
         {% for material in entry.materials %}
-        <dt class="col-sm-3">{{ entry.get("materials|kind").get(loop.index0|string) or 'Material' }}</dt>
+            {% if entry.get('materials|kind') %}
+                <dt class="col-sm-3">{{ entry.get("materials|kind").get(loop.index0|string) or 'Material' }}</dt>
+            {% else %}
+                <dt class="col-sm-3">Material</dt>
+            {% endif %}
         <dd class="col-sm-9">
             <a href="{{material}}" target="_blank">{{material}}</a>
         </dd>
@@ -15,7 +19,7 @@
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 my-4"><h5>Sources included</h5></dt>
-        <dd class="col-sm-9 my-4"><small class="text-muted">Shows how many of the sources listed in this inventory are included in the dataset.</small></dd>
+        <dd class="col-sm-9 my-4"><small class="text-muted">Shows how many of the sources listed in this inventory are included in the corpus.</small></dd>
         <dt class="col-sm-3">Total</dt>
         <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a>
         </dd>
