--- a/flaskinventory/templates/view/elements/general_information.html
+++ b/flaskinventory/templates/view/elements/general_information.html
@@ -12,7 +12,11 @@
             {% if entry.authors is string %}
                 {{ entry.authors }}
             {% else %}
-                {{ ", ".join(entry.authors ) }}
+                <ul class="list-inline">
+                {% for author in entry.authors%}
+                    <li class="list-inline-item {{ 'ps-2 border-start' if not loop.first else '' }}">{{author}}</li>
+                {% endfor %}
+                </ul>
             {% endif %}
         </h6>
         {% endif %}
@@ -108,7 +112,7 @@
         {% if entry.doi %}
             <dt class="col-sm-3">DOI</dt>
             <dd class="col-sm-9">
-                <a href="{{ entry.doi }}" target="_blank">{{ entry.doi }}</a>
+                <a href="https://doi.org/{{ entry.doi }}" target="_blank">{{ entry.doi }}</a>
                 <div class="row mt-3">
                 <div class="col-1">
                     <span class="__dimensions_badge_embed__" data-doi="{{ entry.doi }}" data-hide-zero-citations="true" data-style="small_circle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
@@ -122,7 +126,7 @@
         {% endif %}
         {% if entry.arxiv %}
             <dt class="col-sm-3">arXiv</dt>
-            <dd class="col-sm-9"><a href="{{ entry.arxiv }}" target="_blank">{{ entry.arxiv }}</a></dd>
+            <dd class="col-sm-9"><a href="https://arxiv.org/abs/{{ entry.arxiv }}" target="_blank">{{ entry.arxiv }}</a></dd>
         {% endif %}
     </dl>
 </div>
