#14 summary of submit form now pretty prints channel

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -624,7 +624,7 @@
         <h3 class="mb-5">Summary</h3>
 
         <div id='summary-container'>
-            <div id='summary-channel' hidden>
+            <div id='summary-channel_public' hidden>
                 <h6 class="text-muted mb-1">
                     Through which channel is the news source distributed?
                 </h6>
