--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -33,6 +33,25 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 # Changelog
 
+### 11 Apr 2022: Update to Version 1.0
+
+Larger update where background processes were improved and major section of the source code were refactored.
+
+#### New and completely revised entry types
+
+ - Updated or added: corpus, dataset, tool, archive, research papers
+ - Above entry types can now be added by users
+ - Automatically load meta information via DOI, arXiv, CRAN, and PyPI
+
+#### Refreshed UI
+
+ - UI Tweaks here and there
+ - When adding a new entry, hitting "Enter" key won't accidentally submit the entry anymore
+
+#### Other
+
+ - Users can now delete drafts (go to "My Entries")
+
 ### 15 Feb 2022
 
  - Improvements for the user interface
