--- a/flaskinventory/templates/edit/editform.html
+++ b/flaskinventory/templates/edit/editform.html
@@ -1,4 +1,9 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} 
+
+{% block content %}
+<script id='json-data' type="application/ld+json">
+{{ entry|safe }}
+</script>
 
 
     {% from "helpers/_formhelpers.html" import render_field %}
@@ -20,6 +25,7 @@
         </div>
     </form>
 {% include "helpers/_tomselect.html" %}
+
 {% endblock content %} 
 
 {% block sidebar %} 
